# app/Http/Controllers/GLAccountController.php
@@ -32,6 +32,33 @@ class GLAccountController extends BaseController
     'NEXTINVOICENO'
   ];
   
+  /**
+  * @SWG\Get(
+  *   path="/account/{id}",
+  *   summary="Find GL Account by ID",
+  *   tags={"GLAccount"},
+  * 	operationId="findOne",
+  *   @SWG\Parameter(
+  *     name="ID",
+  *     description="ID of GL Account that needs to be fetched",
+  *     in="path",
+  *     required=true,
+  *     type="number"
+  *   ),
+  *   security = { { "Bearer": {} } },
+  *   @SWG\Response(
+  *     response=200,
+  *     description="Success Response",
+  *     ref="$/responses/ApiResponse",
+  *     @SWG\Property(property="data", type="object",
+  *       @SWG\Property(property="data", ref="$/definitions/GLAccount")
+  *     )
+  *   ),
+  *   @SWG\Response(response=422,description="Error Response",ref="$/responses/ApiError"),
+  *   @SWG\Response(response=401,description="Unauthorized"),
+  *   @SWG\Response(response=404,description="Not Found")
+  * )
+  */
   function findOne($id) {
     try {
       $suspended = Service::checkSuspended($id);
@@ -52,6 +79,35 @@ class GLAccountController extends BaseController
     }
   }
 
+  /**
+  * @SWG\Get(
+  *   path="/account",
+  *   summary="Find All GL Account with Paginate",
+  *   tags={"GLAccount"},
+  * 	operationId="findAll",
+  *   security = { { "Bearer": {} } },
+  *   @SWG\Parameter(name="page", description="Page - eg: 1", in="query", type="number"),
+  *   @SWG\Parameter(name="limit", description="Limit Data - eg: 10", in="query", type="number"),
+  *   @SWG\Parameter(name="keyword", description="Search - eg: Name", in="query", type="string"),
+  *   @SWG\Parameter(name="sort", description="Sorting Field - eg: - ID (desc by id)", in="query", type="string"),
+  *   @SWG\Parameter(name="type", description="Retrieve data without paginate query - eg: all", in="query", type="string"),
+  *   @SWG\Parameter(name="from", description="Retrieve data by date from - eg: 2019-08-01", in="query", type="string"),
+  *   @SWG\Parameter(name="to", description="Retrieve data by date to - eg: 2019-08-01", in="query", type="string"),
+  *   @SWG\Parameter(name="field", description="Retrieve data based on the input fields - eg: ID, NAME", in="query", type="string"),
+  *   @SWG\Parameter(name="relationship", description="View relationship of data - eg: 0", in="query", type="string"),
+  *   @SWG\Response(
+  *     response=200,
+  *     description="Success Response",
+  *     ref="$/responses/ApiResponsePaginate",
+  *     @SWG\Property(property="data", type="object",
+  *       @SWG\Property(property="data", @SWG\Items(ref="#/definitions/GLAccount"))
+  *     )
+  *   ),
+  *   @SWG\Response(response=422,description="Error Response",ref="$/responses/ApiError"),
+  *   @SWG\Response(response=401,description="Unauthorized"),
+  *   @SWG\Response(response=404,description="Not Found")
+  * )
+  */
   function findAll(Request $request) {
     try {
       $data = Service::getAll($request->all(), $this->fillable);
@@ -82,6 +138,31 @@ class GLAccountController extends BaseController
     }
   }
 
+  /**
+  * @SWG\Get(
+  *   path="/account-count",
+  *   summary="Count GL Account Data",
+  *   tags={"GLAccount"},
+  * 	operationId="countData",
+  *   security = { { "Bearer": {} } },
+  *   @SWG\Parameter(name="keyword", description="Search - eg: Name", in="query", type="string"),
+  *   @SWG\Parameter(name="from", description="Retrieve data by date from - eg: 2019-08-01", in="query", type="string"),
+  *   @SWG\Parameter(name="to", description="Retrieve data by date to - eg: 2019-08-01", in="query", type="string"),
+  *   @SWG\Response(
+  *     response=200,
+  *     description="Success Response",
+  *     ref="$/responses/ApiResponse",
+  *     @SWG\Property(property="data", type="object",
+  *       @SWG\Property(property="data", type="object",
+  *         @SWG\Property(property="count", type="number")
+  *       )
+  *     )
+  *   ),
+  *   @SWG\Response(response=422, description="Error Response", ref="$/responses/ApiError"),
+  *   @SWG\Response(response=401,description="Unauthorized"),
+  *   @SWG\Response(response=404,description="Not Found")
+  * )
+  */
   function countData(Request $request) {
     try {
       $data = Service::count($request->all(), $this->fillable);
