# storage/api-docs/api-docs.json
@@ -14,6 +14,383 @@
         "application/xml"
     ],
     "paths": {
+        "/account/{id}": {
+            "get": {
+                "tags": [
+                    "GLAccount"
+                ],
+                "summary": "Find GL Account by ID",
+                "operationId": "findOne",
+                "parameters": [
+                    {
+                        "name": "ID",
+                        "in": "path",
+                        "description": "ID of GL Account that needs to be fetched",
+                        "required": true,
+                        "type": "number"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success Response",
+                        "schema": {
+                            "property": "data",
+                            "properties": {
+                                "success": {
+                                    "type": "boolean"
+                                },
+                                "meta": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Success"
+                                        }
+                                    },
+                                    "type": "object"
+                                },
+                                "data": {
+                                    "properties": {
+                                        "GLACCOUNT": {
+                                            "type": "number"
+                                        },
+                                        "CURRENCYID": {
+                                            "type": "string"
+                                        },
+                                        "ACCOUNTNAME": {
+                                            "type": "string"
+                                        },
+                                        "ACCOUNTTYPE": {
+                                            "type": "string"
+                                        },
+                                        "SUBACCOUNT": {
+                                            "type": "string"
+                                        },
+                                        "PARENTACCOUNT": {
+                                            "type": "string"
+                                        },
+                                        "SUSPENDED": {
+                                            "type": "string"
+                                        },
+                                        "MEMO": {
+                                            "type": "string"
+                                        },
+                                        "FIRSTPARENTACCOUNT": {
+                                            "type": "string"
+                                        },
+                                        "INDENTLEVEL": {
+                                            "type": "string"
+                                        },
+                                        "ISFISCAL": {
+                                            "type": "string"
+                                        },
+                                        "ISALLOCTOPROD": {
+                                            "type": "string"
+                                        },
+                                        "TRANSACTIONID": {
+                                            "type": "string"
+                                        },
+                                        "IMPORTEDTRANSACTIONID": {
+                                            "type": "string"
+                                        },
+                                        "BRANCHCODEID": {
+                                            "type": "string"
+                                        },
+                                        "LFT": {
+                                            "type": "string"
+                                        },
+                                        "RGT": {
+                                            "type": "string"
+                                        },
+                                        "ISROOT": {
+                                            "type": "string"
+                                        },
+                                        "NEXTINVOICENO": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            },
+                            "type": "object"
+                        }
+                    },
+                    "422": {
+                        "description": "Error Response",
+                        "schema": {
+                            "properties": {
+                                "success": {
+                                    "type": "boolean",
+                                    "example": false
+                                },
+                                "meta": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                },
+                                "detail": {
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
+            }
+        },
+        "/account": {
+            "get": {
+                "tags": [
+                    "GLAccount"
+                ],
+                "summary": "Find All GL Account with Paginate",
+                "operationId": "findAll",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "Page - eg: 1",
+                        "type": "number"
+                    },
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "description": "Limit Data - eg: 10",
+                        "type": "number"
+                    },
+                    {
+                        "name": "keyword",
+                        "in": "query",
+                        "description": "Search - eg: Name",
+                        "type": "string"
+                    },
+                    {
+                        "name": "sort",
+                        "in": "query",
+                        "description": "Sorting Field - eg: - ID (desc by id)",
+                        "type": "string"
+                    },
+                    {
+                        "name": "type",
+                        "in": "query",
+                        "description": "Retrieve data without paginate query - eg: all",
+                        "type": "string"
+                    },
+                    {
+                        "name": "from",
+                        "in": "query",
+                        "description": "Retrieve data by date from - eg: 2019-08-01",
+                        "type": "string"
+                    },
+                    {
+                        "name": "to",
+                        "in": "query",
+                        "description": "Retrieve data by date to - eg: 2019-08-01",
+                        "type": "string"
+                    },
+                    {
+                        "name": "field",
+                        "in": "query",
+                        "description": "Retrieve data based on the input fields - eg: ID, NAME",
+                        "type": "string"
+                    },
+                    {
+                        "name": "relationship",
+                        "in": "query",
+                        "description": "View relationship of data - eg: 0",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success Response",
+                        "schema": {
+                            "property": "data",
+                            "properties": {
+                                "success": {
+                                    "type": "boolean"
+                                },
+                                "meta": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Success"
+                                        },
+                                        "paginate": {
+                                            "properties": {
+                                                "keyword": {
+                                                    "type": "string"
+                                                },
+                                                "totalData": {
+                                                    "type": "number"
+                                                },
+                                                "perPage": {
+                                                    "type": "number"
+                                                },
+                                                "lastPage": {
+                                                    "type": "number"
+                                                },
+                                                "currentPage": {
+                                                    "type": "number"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                },
+                                "data": {
+                                    "items": {
+                                        "$ref": "#/definitions/GLAccount"
+                                    }
+                                }
+                            },
+                            "type": "object"
+                        }
+                    },
+                    "422": {
+                        "description": "Error Response",
+                        "schema": {
+                            "properties": {
+                                "success": {
+                                    "type": "boolean",
+                                    "example": false
+                                },
+                                "meta": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                },
+                                "detail": {
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
+            }
+        },
+        "/account-count": {
+            "get": {
+                "tags": [
+                    "GLAccount"
+                ],
+                "summary": "Count GL Account Data",
+                "operationId": "countData",
+                "parameters": [
+                    {
+                        "name": "keyword",
+                        "in": "query",
+                        "description": "Search - eg: Name",
+                        "type": "string"
+                    },
+                    {
+                        "name": "from",
+                        "in": "query",
+                        "description": "Retrieve data by date from - eg: 2019-08-01",
+                        "type": "string"
+                    },
+                    {
+                        "name": "to",
+                        "in": "query",
+                        "description": "Retrieve data by date to - eg: 2019-08-01",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success Response",
+                        "schema": {
+                            "property": "data",
+                            "properties": {
+                                "success": {
+                                    "type": "boolean"
+                                },
+                                "meta": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Success"
+                                        }
+                                    },
+                                    "type": "object"
+                                },
+                                "data": {
+                                    "properties": {
+                                        "count": {
+                                            "type": "number"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    },
+                    "422": {
+                        "description": "Error Response",
+                        "schema": {
+                            "properties": {
+                                "success": {
+                                    "type": "boolean",
+                                    "example": false
+                                },
+                                "meta": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                },
+                                "detail": {
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
+            }
+        },
         "/item/{id}": {
             "get": {
                 "tags": [
@@ -1021,6 +1398,67 @@
                     "type": "string"
                 },
                 "UNITPRICE5": {
+                    "type": "string"
+                }
+            }
+        },
+        "GLAccount": {
+            "properties": {
+                "GLACCOUNT": {
+                    "type": "number"
+                },
+                "CURRENCYID": {
+                    "type": "string"
+                },
+                "ACCOUNTNAME": {
+                    "type": "string"
+                },
+                "ACCOUNTTYPE": {
+                    "type": "string"
+                },
+                "SUBACCOUNT": {
+                    "type": "string"
+                },
+                "PARENTACCOUNT": {
+                    "type": "string"
+                },
+                "SUSPENDED": {
+                    "type": "string"
+                },
+                "MEMO": {
+                    "type": "string"
+                },
+                "FIRSTPARENTACCOUNT": {
+                    "type": "string"
+                },
+                "INDENTLEVEL": {
+                    "type": "string"
+                },
+                "ISFISCAL": {
+                    "type": "string"
+                },
+                "ISALLOCTOPROD": {
+                    "type": "string"
+                },
+                "TRANSACTIONID": {
+                    "type": "string"
+                },
+                "IMPORTEDTRANSACTIONID": {
+                    "type": "string"
+                },
+                "BRANCHCODEID": {
+                    "type": "string"
+                },
+                "LFT": {
+                    "type": "string"
+                },
+                "RGT": {
+                    "type": "string"
+                },
+                "ISROOT": {
+                    "type": "string"
+                },
+                "NEXTINVOICENO": {
                     "type": "string"
                 }
             }
